--- a/EconHist-Assignment1.Rmd
+++ b/EconHist-Assignment1.Rmd
@@ -85,12 +85,16 @@ dta6 <- dta4 %>%
 summary(dta6$x)
 ```
 
-The idea behind this measure is to estimate the exposure of income to the
-stock market crash  by computing the share of total income due to dividends.
-In other words, it should reflect the share of agents' income that depends on 
-the stockmarket since the dividends corresponds to the reward of holdings assets.
-Thus, fluctuations in the stock market will affect dividends, which will in turn
-affect income and consumption.
+The idea behind this measure is to estimate the exposure of to the stock market crash by by
+using the portion of income linked to the stock market. To do so, we compute the share of dividend
+income in total income at the state level. Dividends correspond to the distribution of firms' profits
+to stockholders; they are closely tied to asset prices, thus we expect fluctuations in the stock
+market to affect them. That is why we use it as a proxy for the exposure to the stock market.
+
+In Chodorow-Reich et al. (2021), the authors estimate an MPC of 3.2 cents of dollar for stock wealth
+annually. These findings support the idea of a correlation between the exposure to the stock market
+and consumption and gives us reasons to think that measuring this exposure could help us understand
+the impact of the stock market crash on consumption.
 
 
 ### 7. Explain the idea behind the regression.
