--- a/EconHist-Assignment1.Rmd
+++ b/EconHist-Assignment1.Rmd
@@ -170,20 +170,34 @@ the wealth channel described in Chodorow-Reich et al. (2021).
 For comparison, in Temin (1976), the author found there was an actual effect of the crash and drop in consumers'
 spendings but that it was fairly small.
 
-There are no coefficients on exposure ($x_s$) and whether or not the crash happened (crash).
+Note there are no coefficients on exposure ($x_s$) and whether or not the crash happened (crash).
 As indicated in $summary(re8_feols)$, both variables are removed because of collinearity.
 We can assume they were removed by controlling the fixed-effect. Indeed, $x_s$ stays constant across
 each state while $D_t$ affects all states uniformly across time.
 
 
 ### 9. Assuming our measure of exposure to the stock market is the right one,
-    would regression (1) be appropriate to capture the wealth channel of the crash?
-    Would it capture the uncertainty channel that Romer writes about?
+# would regression (1) be appropriate to capture the wealth channel of the crash?
+# Would it capture the uncertainty channel that Romer writes about?
 
-#Reg (1) appropriate to capture wealth channel?
-
-#capture uncertainty channel (Romer)
-
+The wealth channel refers to the effect of the crash on households' wealth, which in turn affects consumption.
+Assuming our measure of exposure is the right one and if consider we car sales (a durable good) to be a good
+proxy for consumption, we might think this regression is appropriate to capture the wealth channel of the crash, keeping in
+mind we operate at the state level.
+However, it is still difficult to disentengle the fall  in consumption due to wealth exposure to the 
+stock market and to uncertainty. Indeed, as described in Chodorow-Reich et al. (2021), the main challenge when 
+studying the wealth channel is that stock prices are forward-looking.  As a result, agents might decide to cut 
+spendings not because of  wealth destruction but because they anticipate a "negative stock return and 
+a subsequent decline in household spending and employment." In this case, an initial fall in stock prices might
+worsen expectations due to uncertainty on future wealth/income, causing agents to consume less.
+Romer describes the uncertainty channel as the immediate drop in consumer spending caused by a
+temporary increase in income uncertainty. According to this uncertainty hypothesis, there should be a
+"inverse relationship between consumer spending on durable goods" (here cars) "and uncertainty about future
+income".
+Thus, this regression would not fully capture Romer's uncertainty channel since it is not direcly tied to
+the loss of wealth but rather the agents' behavior in an uncertain environment. Some of it might be
+reflected in the interaction term since states with greater exposure might react more in this setting,
+but it is not specifically designed to measure this channel.
 
 
 ### 10. Potential problem of income data coming from federal tax returns:
